--- a/account-service/src/main/resources/application.properties
+++ b/account-service/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.application.name=fund-transaction
+spring.application.name=-account-service
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
 server.port=18080
+spring.profiles.active=dev
+spring.cloud.config.server=dev
