--- a/account-service/src/main/resources/application.properties
+++ b/account-service/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
 server.port=18080
 spring.profiles.active=dev
-spring.cloud.config.server=dev
+management.endpoints.web.exposure.include=*
